<?xml version="1.0"?>
<package format="2">
  <name>using_markers</name>
  <version>0.0.0</version>
  <description>The using_markers package</description>

  <maintainer email="sikang@todo.todo">sikang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!--<build_depend>catkin_simple</build_depend>-->
  <depend>roscpp</depend>
  <!--<depend>cmake_modules</depend>-->
  <depend>nodelet</depend>
  <!--<depend>map_generator</depend>-->
  <!--<depend>trajectory_solver</depend>-->
  <!--<depend>quadrotor_msgs</depend>-->

  <export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
     <cpp cflags="-I${prefix}/include"
             lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib"/>

  </export>



</package>
