<package format="2">
  <name>ffld_nx</name>
  <version>0.1.0</version>
  <description> Fast Fourier Linear Detection </description>
  <author>Charles Dubout</author>
  <author>Nikolay Atanasov</author>
  <maintainer email="atanasov@seas.upenn.edu">Nikolay Atanasov</maintainer>
  <license>GPLv3</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>cmake_modules</build_depend>

  <!-- Dependencies needed to compile and run this package. -->
  <depend>roscpp</depend>
  <depend>libfftw3</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
